--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "helmet": "^3.15.1",
     "moment": "^2.24.0",
     "mysql": "^2.16.0",
+    "node-fetch": "^2.4.1",
     "socket.io": "*"
   }
 }
